--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,6 +212,11 @@ td {
     border-right: 1px solid #C1C3D1;
 }
 
+td.text-left  a {
+    text-decoration: none;
+    color: #000;
+}
+
 td:last-child {
     border-right: 0px;
 }
@@ -356,7 +361,7 @@ button.create {
 .avt {
     max-width: 90%;
     background-color: #C1C3D1;
-    padding: 200px;
+    padding: 185px;
     margin: 40px 0;
 }
 
